fix horizontal scroll across all view ports on the index.html file

--- a/css/styles.css
+++ b/css/styles.css
@@ -433,7 +433,9 @@ h2 {
   .nav-bar {
     background: linear-gradient(to right, #000, #434343);
     display: flex;
+    flex-direction: column;
     padding: 5px;
+
     box-shadow: 0 9px 12px 0 #ff0084, 0 9px 20px 0 red;
     width: 100%;
     height: 60px;
